[package]
name = "pm1-sdk"
version = "0.1.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
readme = "README.md"

[dependencies]
driver = { path = "../driver" }
pm1-control-model = { path = "../pm1-control-model" }
serial-port = { path = "../serial-port" }
lazy_static = "*"

# 减小二进制体积
[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
# strip -s target/release/...
