[package]
name = "pm1-sdk"
version = "0.2.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
readme = "README.md"

[dependencies]
pm1-control-model = { path = "../pm1-control-model", features = ["motor"] }
serial-port = { path = "../serial-port" }
driver = { path = "../driver" }
lazy_static = "*"
